# InstagramArchiver

./: .env.sample  .gitignore  .gitleaksignore  CLAUDE.md  README.md  _patch_db_intake.py  _patch_db_intake2.py  _patch_db_intake3.py  _patch_db_intake4.py  archive.py  archive.spec  archive_stories.py  browse.py  convert.py  desktop.ini  dev.md  dialogs.py  extract_photos.py  extract_posts.py  extract_videos.py  ffmpeg_installer.py  file_cmp.py  git_helper.py  input.txt  list_zst_files.py  main.py  models.py  open_timestamps.py  package_archives.py  playwright_helper.py  profile_registration.py  profile_selection.py  pyproject.toml  replay.py  replay_playwright.py  requirements.txt  root_anchor.py  search_archives.py  security-scans.md  timestamper.py  (+1 more)
archiver/: archive.py  automated_archive.py  dialogs.py  finish_button.py  har_sanitizer.py  profile_registration.py  profile_selection.py  replay.py  replay_playwright.py  resume_archive.py
archiver/automated-scripts/: playwright_follower_automation.py
archiver/automated_scripts/: instagram_followers_scraper.py  instagram_with_followers_modal_open.html
archiver/executable/: archive.spec  build_exe.py  hook-exception.py
archiver/summarizers/: download_log.py  entities_summary_generator.py  finalize_archive.py  har_summary_generator.py  wacz_summary_generator.py
browsing_platform/browsing-platform-client/: package.json
browsing_platform/browsing-platform-client/src/: index.tsx
browsing_platform/client/: .env.production  .env.sample  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  react-upgrade.md  tsconfig.json  vite.config.ts
browsing_platform/client/public/: index.html
browsing_platform/client/src/: App.tsx  index.tsx  setupTests.ts
browsing_platform/server/: rate_limiter.py  server.py
data_transfers/: package_archives.py  safe_copy.py
db_loaders/: archives_db_loader.py  db_intake.py  migrate.py  search_archives.py  thumbnail_generator.py
db_loaders/aa/: aa_archive_loader.py  aa_entity_extractor.py  aa_html_parser.py
db_loaders/aa_archive_loading/: analyze_data.py  archive_types.py  download_html_summary.py  entity_types.py  extract_entities.py  extract_entities_utils.py  parse_html_summary.py  xlsx_reader.py
extractors/: archives_db_loader.py  db_intake.py  entity_types.py  extract_photos.py  extract_videos.py  models.py  models_api_v1.py  models_graphql.py  models_har.py  reconcile_entities.py  session_attachments.py  structures_extraction.py  structures_extraction_api_v1.py  structures_extraction_graphql.py  structures_extraction_graphql_response.py  structures_extraction_html.py  structures_from_wacz.py  structures_to_entities.py  thumbnail_generator.py  wacz_metadata.py
infra/: create_db.sql  infra.azcli  migrate.py  nginx.conf  nginx_glansubmit.conf
infra/migrations/: V001__create_incorporation_job_table.py  V002__entity_share_link_index.py  V002__entity_share_link_index.sql  V003__archive_session_refactoring.py  V003__archive_session_refactoring.sql  V004__allow_null_post_url.py  V005__fix_post_urls.py  V006__media_extra_indexes.py  V007__archive_unique_constraints.py  V009__add_comment_url_index.py  V010__media_thumbnail_status.py  V011__search_date_indexes.py  V012__account_post_count.py  V014__media_account_id.py  V015__tag_system_enhancements.py  V015__tag_system_enhancements.sql  V016__tag_quick_access.py  V016__tag_quick_access.sql  V017__restore_archive_session_notes.py  V018__share_link_attachment_access.py  V019__url_suffix_and_platform.py  V020__reset_none_url_suffix_sessions.py  V021__reextract_broken_partial_stream_videos.py  V022__reconcile_media_local_url_to_largest.py  V023__tag_indexes.py  V024__totp_and_preauth.py  V025__drop_totp_backup_code.py  V026__pre_auth_token_purpose.py  V027__share_link_password.py  V028__tag_ui_controls.py  V029__community_detection_indexes.py  V030__media_aspect_ratio.py  V031__error_log_2fa_attempt_event_type.py  V032__cleanup_remaining_null_url_suffix_accounts.py  V033__tag_community_dismissals.py  V034__backfill_account_bio.py  V035__share_link_minimal_access_default.py  V036__dedupe_archive_session_external_id.py
migrations/: V001__create_incorporation_job_table.sql  V001__initial_schema.sql  V004__allow_null_post_url.sql  V005__fix_post_urls.py  V007__archive_unique_constraints.py  V008__new_engagement_tables.py  V009__add_comment_url_index.py  V011__search_date_indexes.py  V012__account_post_count.py  V013__media_publication_date.py
summarizers/: archive_summary_generator.py  entities_summary_generator.py
utils/: db.py  ffmpeg_installer.py  file_cmp.py  fix_openssl_dlls.py  git_helper.py  har_to_warc.py  misc.py  par2_installer.py  timestamper.py  timestamper_opentimestamps.py
utils/commit_tracker/: git_helper.py
utils/compression/: zpaq.py
utils/data_transfers/: package_archives.py  safe_copy.py
utils/integrity/: __init__.py  chunk_manifest.py  par2.py  protect.py  prune.py  seal.py  verify.py
utils/opentimestamps/: fix_openssl_for_ots.py  retroactive_timestamping.py  timestamper_opentimestamps.py
(+176 files in other folders)
